style(observability): fix import ordering and replace deprecated Thread.getId()
Signed-off-by: Charles <azanux@gmail.com>